--- a/joy-boot-jetty9/build.gradle
+++ b/joy-boot-jetty9/build.gradle
@@ -15,7 +15,15 @@ ext {
     ]
 }
 
+sourceSets {
+    main {
+        java {
+            srcDirs '../server/src/main/java'
+        }
+    }
+}
+
 dependencies {
-    compile project(':server')
+    compile "org.jodd:jodd-joy:${joddVersion}"
     compile jetty_embed
 }
