--- a/joy-boot-tomcat8/build.gradle
+++ b/joy-boot-tomcat8/build.gradle
@@ -16,7 +16,15 @@ ext {
     ]
 }
 
+sourceSets {
+    main {
+        java {
+            srcDirs '../server/src/main/java'
+        }
+    }
+}
+
 dependencies {
-    compile project(':server')
+    compile "org.jodd:jodd-joy:${joddVersion}"
     compile tomcat_embed
 }
